CHANGES IN RITOOLS VERSION 0.1-15

This is a maintenance release.

* Fixed an obscure bug in which we indirectly fiddled with `data.table` related
  global options (#69)
* Disabled tests of RSVGTipsDevice-dependent functionality on Windows platforms,
  where (as of this writing) RSVGTipsDevice does not build and check reliably and
  is not distributed in binary through CRAN (#71)

CHANGES IN RITOOLS VERSION 0.1-14

(This version was not released on CRAN.)

CHANGES IN RITOOLS VERSION 0.1-13

* With `xBalance`, you can now specify strata "foo" and "bar" by including
  "+ strata(foo) + strata(bar)" in the `fmla` argument, without need to give
  a separate `strata` argument (eg `strata=list(foo=~foo, bar=~bar)).

CHANGES IN RITOOLS VERSION 0.1-12

* Switched to base graphics instead of the lattice package for balance
  plots.
* Option to make plots on absolute, instead of signed, values.
* Added the ability to include tooltips to balance plots when using
  the RSVGTipsDevice package.
* Added a `balanceplot` function to handle plotting matrices, not just
  `xbal` objects.
* Balance plots can be grouped into related variables. By default
  factors are automatically grouped for `xbal` objects.
* Some performance improvements when certain results are not requested.
* `post.alignment.transform` argument to `xBalance` allows modifying
  the data after per-stratum centering.
* `subset` method for `xbal` objects.

CHANGES in RItools v. 0.1-11

NEW FEATURES
* the null SD of the difference in adjusted means is now reportable as
  "adj.means.diffs.sd"
* report="all" provides all relevant statistics
* Entering "args(xBalance)" is now useful as a reminder of report=
  options.

DEPRECATED & DEFUNCT
* The default imputation method for missing data is the median. Before
  0.1-9 it was the mean. To use the mean, use impfn=mean.default.
* Passing strata=NULL to xBalance is depracated, as it can be easy to
  do inadvertently, with a misspelling of a non-null intended