@@ -6,7 +6,8 @@ xBalance <- function(fmla, strata=list(unstrat=NULL),
                      #                     include.means=FALSE, chisquare.test=FALSE,
                      stratum.weights=harmonic, na.rm=FALSE,
                      covariate.scaling=NULL, normalize.weights=TRUE,impfn=median,
-                     post.alignment.transform=NULL) {
+                     post.alignment.transform=NULL,
+                     pseudoinversion_tol=.Machine$double.eps) {
   stopifnot(class(fmla)=="formula",
             is.null(strata) || is.factor(strata) || is.list(strata),
             !is.data.frame(strata) || !any(is.na(names(strata))),
@@ -123,7 +124,8 @@ xBalance <- function(fmla, strata=list(unstrat=NULL),
                                  mm1[gs.df[[nm]],,drop=FALSE],
                                  report, swt.ls[[nm]],
                                  s.p, normalize.weights,zzname,
-                                 post.alignment.transform)
+                                 post.alignment.transform,
+                                 pseudoinversion_tol=pseudoinversion_tol)
                 })
   names(RES) <- names(ss.df)
   ##nms <- paste(rep(names(ss.df), rep(length(RES[[1]]$dfr),length(ss.df))),
